[package]
categories = ["embedded", "no-std"]
name = "rstripee"
version = "0.0.0"
keywords = ["embedded-hal", "led"]

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
cortex-m-semihosting = "0.2.0"
panic-itm = "0.1.0"
#embedded-hal = { git = "https://github.com/astro/embedded-hal.git", branch = "io-4", features = ["unproven"] }
embedded-hal = "0.1.2"
stm32f429 = { path = "../../stm32f4/stm32f429", features = ["rt"] }
stm32f429-hal = { path = "../../stm32f4/stm32f429-hal", features = ["rt"] }
nb = "0.1.1"

[profile.release]
debug = 2
lto = true
